Lab 6: Test commit

--- a/Hannah_Richard_INST326_Project02_Template.ipynb
+++ b/Hannah_Richard_INST326_Project02_Template.ipynb
@@ -80,6 +80,8 @@
     }
    ],
    "source": [
+    "# Lab 6: Noah Lee, testing if the commit works!\n",
+    "\n",
     "# how this program works:\n",
     "\n",
     "# the file path below may need to be changed depending on the computer this program is being run on\n",
