I tested how to commit a part of the code for lab 6

--- a/Hannah_Richard_INST326_Project02_Template.ipynb
+++ b/Hannah_Richard_INST326_Project02_Template.ipynb
@@ -93,6 +93,8 @@
     "\n",
     "# code for program:\n",
     "\n",
+    "# Hi my name is Hannah Richard and I am testing how to commit a change for lab 6\n",
+    "\n",
     "# imports\n",
     "import tkinter as tk # import tkinter module\n",
     "from tkinter import ttk # import tkk\n",
