--- a/Hannah_Richard_INST326_Project02_Template.ipynb
+++ b/Hannah_Richard_INST326_Project02_Template.ipynb
@@ -82,6 +82,8 @@
    "source": [
     "# Lab 6: Noah Lee, testing if the commit works!\n",
     "\n",
+    "# Lab 6: Joe Bui, commit for lab 6!\n",
+    "\n",
     "# how this program works:\n",
     "\n",
     "# the file path below may need to be changed depending on the computer this program is being run on\n",
