Committed another comment

--- a/Hannah_Richard_INST326_Project02_Template.ipynb
+++ b/Hannah_Richard_INST326_Project02_Template.ipynb
@@ -86,6 +86,8 @@
     "\n",
     "# Lab 6: Fayez Atufa, trying the commit feature\n",
     "\n",
+    "# Lab 6: Fayez Atufa, committing again\n",
+    "\n",
     "# how this program works:\n",
     "\n",
     "# the file path below may need to be changed depending on the computer this program is being run on\n",
