edited code so when open notebook clicks, openscwd

--- a/Hannah_Richard_INST326_Project02_Template.ipynb
+++ b/Hannah_Richard_INST326_Project02_Template.ipynb
@@ -18,6 +18,12 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3c6a5a24",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "62110c98",
    "metadata": {},
    "source": [
@@ -67,10 +73,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "57954c28",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-04-16 17:54:34.064 python[55459:9454990] +[CATransaction synchronize] called within transaction\n",
+      "2024-04-16 17:54:36.070 python[55459:9454990] +[CATransaction synchronize] called within transaction\n",
+      "2024-04-16 17:54:37.073 python[55459:9454990] +[CATransaction synchronize] called within transaction\n",
+      "2024-04-16 17:54:37.335 python[55459:9454990] +[CATransaction synchronize] called within transaction\n",
+      "2024-04-16 17:54:37.839 python[55459:9454990] +[CATransaction synchronize] called within transaction\n",
+      "2024-04-16 17:54:53.565 python[55459:9454990] +[CATransaction synchronize] called within transaction\n",
+      "2024-04-16 17:54:54.665 python[55459:9454990] +[CATransaction synchronize] called within transaction\n",
+      "2024-04-16 17:55:11.432 python[55459:9454990] +[CATransaction synchronize] called within transaction\n",
+      "2024-04-16 17:55:14.204 python[55459:9454990] +[CATransaction synchronize] called within transaction\n",
+      "2024-04-16 17:55:28.663 python[55459:9454990] +[CATransaction synchronize] called within transaction\n",
+      "2024-04-16 17:55:30.676 python[55459:9454990] +[CATransaction synchronize] called within transaction\n",
+      "2024-04-16 17:55:31.190 python[55459:9454990] +[CATransaction synchronize] called within transaction\n",
+      "2024-04-16 17:55:34.783 python[55459:9454990] +[CATransaction synchronize] called within transaction\n",
+      "2024-04-16 17:55:34.887 python[55459:9454990] +[CATransaction synchronize] called within transaction\n",
+      "2024-04-16 17:55:34.991 python[55459:9454990] +[CATransaction synchronize] called within transaction\n",
+      "2024-04-16 17:55:35.099 python[55459:9454990] +[CATransaction synchronize] called within transaction\n",
+      "2024-04-16 17:55:35.338 python[55459:9454990] +[CATransaction synchronize] called within transaction\n",
+      "2024-04-16 17:55:35.442 python[55459:9454990] +[CATransaction synchronize] called within transaction\n",
+      "2024-04-16 17:55:35.489 python[55459:9454990] +[CATransaction synchronize] called within transaction\n"
+     ]
+    }
+   ],
    "source": [
     "# Lab 6: Noah Lee, testing if the commit works!\n",
     "\n",
@@ -98,6 +130,7 @@
     "from tkinter import ttk # import tkk\n",
     "import datetime # import module for working with dates and times\n",
     "from tkinter import filedialog # import module for files\n",
+    "import os\n",
     "\n",
     "# The MainWindow class creates a custom GUI window based on the tkinter window (tk.Tk)\n",
     "# It has an __init__() method, and three additional methods (new_note(), open_notebook(), and save_notebook())\n",
@@ -146,10 +179,20 @@
     "        presenting only the title of the note to the user. From here, the user can click\n",
     "        on the notes to see more details on the notes.\n",
     "        '''\n",
+    "        # edit code so that when you open notebook, it opens the working directory\n",
+    "    \n",
     "        new_window = tk.Toplevel(self) # create top level window\n",
     "        new_window.geometry(\"600x400\") # set dimensions\n",
     "        new_window.title(\"Notes\") # title of window\n",
     "        tk.Label(new_window, text = \"Click on the notes to get more details\").pack() # gives the user instructions\n",
+    "        \n",
+    "        filepath = filedialog.askopenfilename(initialdir = os.getcwd(),\n",
+    "                                              filetypes = [(\"text files\")])\n",
+    "        if filepath:\n",
+    "            with open(filepath, \"r\") as file:\n",
+    "                content = file.read().strip()\n",
+    "                note_data = content.split('\\n\\n')\n",
+    "            \n",
     "        \n",
     "        if self.notebook: # if there is a value in the self.notebook attribute this will run\n",
     "            for note in self.notebook: # iterates through each object in the self.notebook attribute\n",
@@ -184,7 +227,7 @@
     "        This method does not save all notes at once, only the note created just prior to clicking this button is saved.\n",
     "        '''\n",
     "        # ** this file path will need to be chnaged to work on the graders computer\n",
-    "        file = filedialog.asksaveasfile(initialdir = \"/Users/hannahrichard/2_semester/INST326/test_files\",\n",
+    "        file = filedialog.asksaveasfile(initialdir = os.getcwd(),\n",
     "                                          defaultextension = \".txt\", \n",
     "                                          filetypes = [(\"text file\", \".txt\"),\n",
     "                                         (\"all files\", \".*\")]) # gets the working directory where files will be saved, *** may need to be changed depending on the computer that this program is being run on         \n",
@@ -314,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "dd1811bf",
    "metadata": {},
    "outputs": [
