minor changes, save does not save

--- a/Hannah_Richard_INST326_Project02_Template.ipynb
+++ b/Hannah_Richard_INST326_Project02_Template.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "id": "57954c28",
    "metadata": {},
    "outputs": [
@@ -81,25 +81,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-04-16 17:54:34.064 python[55459:9454990] +[CATransaction synchronize] called within transaction\n",
-      "2024-04-16 17:54:36.070 python[55459:9454990] +[CATransaction synchronize] called within transaction\n",
-      "2024-04-16 17:54:37.073 python[55459:9454990] +[CATransaction synchronize] called within transaction\n",
-      "2024-04-16 17:54:37.335 python[55459:9454990] +[CATransaction synchronize] called within transaction\n",
-      "2024-04-16 17:54:37.839 python[55459:9454990] +[CATransaction synchronize] called within transaction\n",
-      "2024-04-16 17:54:53.565 python[55459:9454990] +[CATransaction synchronize] called within transaction\n",
-      "2024-04-16 17:54:54.665 python[55459:9454990] +[CATransaction synchronize] called within transaction\n",
-      "2024-04-16 17:55:11.432 python[55459:9454990] +[CATransaction synchronize] called within transaction\n",
-      "2024-04-16 17:55:14.204 python[55459:9454990] +[CATransaction synchronize] called within transaction\n",
-      "2024-04-16 17:55:28.663 python[55459:9454990] +[CATransaction synchronize] called within transaction\n",
-      "2024-04-16 17:55:30.676 python[55459:9454990] +[CATransaction synchronize] called within transaction\n",
-      "2024-04-16 17:55:31.190 python[55459:9454990] +[CATransaction synchronize] called within transaction\n",
-      "2024-04-16 17:55:34.783 python[55459:9454990] +[CATransaction synchronize] called within transaction\n",
-      "2024-04-16 17:55:34.887 python[55459:9454990] +[CATransaction synchronize] called within transaction\n",
-      "2024-04-16 17:55:34.991 python[55459:9454990] +[CATransaction synchronize] called within transaction\n",
-      "2024-04-16 17:55:35.099 python[55459:9454990] +[CATransaction synchronize] called within transaction\n",
-      "2024-04-16 17:55:35.338 python[55459:9454990] +[CATransaction synchronize] called within transaction\n",
-      "2024-04-16 17:55:35.442 python[55459:9454990] +[CATransaction synchronize] called within transaction\n",
-      "2024-04-16 17:55:35.489 python[55459:9454990] +[CATransaction synchronize] called within transaction\n"
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\theno\\miniconda3\\Lib\\tkinter\\__init__.py\", line 1948, in __call__\n",
+      "    return self.func(*args)\n",
+      "           ^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\theno\\AppData\\Local\\Temp\\ipykernel_40476\\3243051144.py\", line 153, in save_notebook\n",
+      "    with open(file, 'w') as filename:\n",
+      "         ^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\theno\\miniconda3\\Lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 286, in _modified_open\n",
+      "    return io_open(file, *args, **kwargs)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "TypeError: expected str, bytes or os.PathLike object, not TextIOWrapper\n"
      ]
     }
    ],
@@ -129,7 +122,8 @@
     "import tkinter as tk # import tkinter module\n",
     "from tkinter import ttk # import tkk\n",
     "import datetime # import module for working with dates and times\n",
-    "from tkinter import filedialog # import module for files\n",
+    "from tkinter import filedialog, messagebox # import module for files\n",
+    "import json\n",
     "import os\n",
     "\n",
     "# The MainWindow class creates a custom GUI window based on the tkinter window (tk.Tk)\n",
@@ -187,12 +181,19 @@
     "        tk.Label(new_window, text = \"Click on the notes to get more details\").pack() # gives the user instructions\n",
     "        \n",
     "        filepath = filedialog.askopenfilename(initialdir = os.getcwd(),\n",
-    "                                              filetypes = [(\"text files\")])\n",
-    "        if filepath:\n",
-    "            with open(filepath, \"r\") as file:\n",
-    "                content = file.read().strip()\n",
-    "                note_data = content.split('\\n\\n')\n",
-    "            \n",
+    "                                              filetypes = [(\"JSON files\", \"*.json\")])\n",
+    "        # if filepath:\n",
+    "        #     with open(filepath, \"r\") as file:\n",
+    "        #         content = file.read().strip()\n",
+    "        #         notes_data = content.split('\\n\\n')\n",
+    "        #     for note_data in notes_data:\n",
+    "        #         lines = note_data.split('\\n')\n",
+    "        #         if len(lines) >= 3:\n",
+    "        #             note_dict = {\n",
+    "        #                 'title': lines[0].replace('Title:', ''),\n",
+    "        #                 'text': lines[1].replace('Text: ', ''),\n",
+    "        #                 'created': lines[2].replace('Created: ', '')\n",
+    "        #             }\n",
     "        \n",
     "        if self.notebook: # if there is a value in the self.notebook attribute this will run\n",
     "            for note in self.notebook: # iterates through each object in the self.notebook attribute\n",
@@ -227,20 +228,32 @@
     "        This method does not save all notes at once, only the note created just prior to clicking this button is saved.\n",
     "        '''\n",
     "        # ** this file path will need to be chnaged to work on the graders computer\n",
+    "        # notes_dict = [note.to_dict() for note in self.notes]\n",
     "        file = filedialog.asksaveasfile(initialdir = os.getcwd(),\n",
-    "                                          defaultextension = \".txt\", \n",
-    "                                          filetypes = [(\"text file\", \".txt\"),\n",
-    "                                         (\"all files\", \".*\")]) # gets the working directory where files will be saved, *** may need to be changed depending on the computer that this program is being run on         \n",
-    "        \n",
+    "                                          defaultextension = \".json\", \n",
+    "                                          filetypes = [(\"JSON files\", \"*.json\"),\n",
+    "                                         ]) # gets the working directory where files will be saved, *** may need to be changed depending on the computer that this program is being run on         \n",
+    "        if file:\n",
+    "            \n",
+    "                            \n",
     "        # Edited code so we can add more than 3 notes \n",
-    "        if file: # runs if this is a real path\n",
-    "            first_note = self.notes[0] # gets the 0 index, so it will take data from the first note object in the list to save\n",
-    "            file.write(f\"Title: {first_note.note_title}\\n\") # write in title to file\n",
-    "            file.write(f\"Text: {first_note.note_text}\\n\") # write in text to file\n",
-    "            file.write(f\"Tag: {first_note.note_tag}\\n\") # write in tag to file\n",
-    "            file.write(f\"Link: {first_note.note_link}\\n\") # write in link to file\n",
-    "            file.write(f\"Metadata: {first_note.note_metadata}\\n\") # write in metadata to file\n",
+    "         # runs if this is a real path\n",
+    "            first_note = self.notes[0]\n",
+    "            note_data_content = f\"Title: {first_note.note_title}\\n Text: {first_note.note_text}\\n Tag: {first_note.note_tag}\\nLink: {first_note.note_link}\\nMetadata: {first_note.note_metadata}\\n\"\n",
+    "            # gets the 0 index, so it will take data from the first note object in the list to save\n",
+    "            # file.write(f\"Title: {first_note.note_title}\\n\") # write in title to file\n",
+    "            # file.write(f\"Text: {first_note.note_text}\\n\") # write in text to file\n",
+    "            # file.write(f\"Tag: {first_note.note_tag}\\n\") # write in tag to file\n",
+    "            # file.write(f\"Link: {first_note.note_link}\\n\") # write in link to file\n",
+    "            # file.write(f\"Metadata: {first_note.note_metadata}\\n\") # write in metadata to file\n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "            with open(file, 'w') as filename:\n",
+    "                json.dump(note_data_content, filename) \n",
+    "            print(f\"TEST: {note_data_content}\")\n",
     "            self.notes = [] # Setting self.notes to empty allows the index to always be 0\n",
+    "\n",
     "        \n",
     "# the NoteForm() class creates a Toplevel window that is a note form containing fields for\n",
     "# data entry for title, text, link, and tags. It also calculates a meta field with date, time, and timezone\n",
@@ -357,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "id": "dd1811bf",
    "metadata": {},
    "outputs": [
