saving now works

--- a/Hannah_Richard_INST326_Project02_Template.ipynb
+++ b/Hannah_Richard_INST326_Project02_Template.ipynb
@@ -73,29 +73,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 56,
    "id": "57954c28",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in Tkinter callback\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\theno\\miniconda3\\Lib\\tkinter\\__init__.py\", line 1948, in __call__\n",
-      "    return self.func(*args)\n",
-      "           ^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\theno\\AppData\\Local\\Temp\\ipykernel_40476\\3243051144.py\", line 153, in save_notebook\n",
-      "    with open(file, 'w') as filename:\n",
-      "         ^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Users\\theno\\miniconda3\\Lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 286, in _modified_open\n",
-      "    return io_open(file, *args, **kwargs)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "TypeError: expected str, bytes or os.PathLike object, not TextIOWrapper\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Lab 6: Noah Lee, testing if the commit works!\n",
     "\n",
@@ -229,30 +210,27 @@
     "        '''\n",
     "        # ** this file path will need to be chnaged to work on the graders computer\n",
     "        # notes_dict = [note.to_dict() for note in self.notes]\n",
-    "        file = filedialog.asksaveasfile(initialdir = os.getcwd(),\n",
-    "                                          defaultextension = \".json\", \n",
-    "                                          filetypes = [(\"JSON files\", \"*.json\"),\n",
-    "                                         ]) # gets the working directory where files will be saved, *** may need to be changed depending on the computer that this program is being run on         \n",
-    "        if file:\n",
-    "            \n",
-    "                            \n",
+    "        # file = filedialog.asksaveasfile(initialdir = 'C:/Users/theno/Documents/UMD SOPHOMORE/S2/INST 326/Group Project',\n",
+    "        #                                   defaultextension = \".json\", \n",
+    "        #                                   filetypes = [(\"JSON files\", \"*.json\"),\n",
+    "        #                                  ]) # gets the working directory where files will be saved, *** may need to be changed depending on the computer that this program is being run on         \n",
+    "        \n",
+    "        # if file:              \n",
     "        # Edited code so we can add more than 3 notes \n",
     "         # runs if this is a real path\n",
-    "            first_note = self.notes[0]\n",
-    "            note_data_content = f\"Title: {first_note.note_title}\\n Text: {first_note.note_text}\\n Tag: {first_note.note_tag}\\nLink: {first_note.note_link}\\nMetadata: {first_note.note_metadata}\\n\"\n",
-    "            # gets the 0 index, so it will take data from the first note object in the list to save\n",
-    "            # file.write(f\"Title: {first_note.note_title}\\n\") # write in title to file\n",
-    "            # file.write(f\"Text: {first_note.note_text}\\n\") # write in text to file\n",
-    "            # file.write(f\"Tag: {first_note.note_tag}\\n\") # write in tag to file\n",
-    "            # file.write(f\"Link: {first_note.note_link}\\n\") # write in link to file\n",
-    "            # file.write(f\"Metadata: {first_note.note_metadata}\\n\") # write in metadata to file\n",
-    "            \n",
-    "            \n",
-    "            \n",
-    "            with open(file, 'w') as filename:\n",
-    "                json.dump(note_data_content, filename) \n",
-    "            print(f\"TEST: {note_data_content}\")\n",
-    "            self.notes = [] # Setting self.notes to empty allows the index to always be 0\n",
+    "        first_note = self.notes[0]\n",
+    "        note_dict = {'title':first_note.note_title, 'text':first_note.note_text, 'link':first_note.note_link, 'tag':first_note.note_tag, 'meta':first_note.note_metadata} \n",
+    "        # note_data_content = f\"Title: {first_note.note_title}\\n Text: {first_note.note_text}\\n Tag: {first_note.note_tag}\\nLink: {first_note.note_link}\\nMetadata: {first_note.note_metadata}\\n\"\n",
+    "        \n",
+    "        # gets the 0 index, so it will take data from the first note object in the list to save\n",
+    "        # file.write(f\"Title: {first_note.note_title}\\n\") # write in title to file\n",
+    "        # file.write(f\"Text: {first_note.note_text}\\n\") # write in text to file\n",
+    "        # file.write(f\"Tag: {first_note.note_tag}\\n\") # write in tag to file\n",
+    "        # file.write(f\"Link: {first_note.note_link}\\n\") # write in link to file\n",
+    "        # file.write(f\"Metadata: {first_note.note_metadata}\\n\") # write in metadata to file\n",
+    "        with open(f\"{first_note.note_title}.json\", 'w') as filename:\n",
+    "            json.dump(note_dict, filename) \n",
+    "        self.notes = [] # Setting self.notes to empty allows the index to always be 0\n",
     "\n",
     "        \n",
     "# the NoteForm() class creates a Toplevel window that is a note form containing fields for\n",
@@ -370,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 57,
    "id": "dd1811bf",
    "metadata": {},
    "outputs": [
