added an author section when you create a note

--- a/Hannah_Richard_INST326_Project02_Template.ipynb
+++ b/Hannah_Richard_INST326_Project02_Template.ipynb
@@ -73,10 +73,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "id": "57954c28",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-04-17 18:18:21.615 python[90857:10038075] +[CATransaction synchronize] called within transaction\n",
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/homebrew/Caskroom/miniconda/base/lib/python3.11/tkinter/__init__.py\", line 1948, in __call__\n",
+      "    return self.func(*args)\n",
+      "           ^^^^^^^^^^^^^^^^\n",
+      "  File \"/var/folders/ll/q3mkxzb114d_9jy0_83__xy00000gn/T/ipykernel_90857/1441918385.py\", line 101, in <lambda>\n",
+      "    tk.Button(new_window, text = f\"Title: {note.note_title} \", width = 20, height = 5, command = lambda n = note: self.display_whole_note(n)).pack() # when clicked, this button represents the whole note by running the display_whole_note method\n",
+      "                                                                                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/var/folders/ll/q3mkxzb114d_9jy0_83__xy00000gn/T/ipykernel_90857/1441918385.py\", line 123, in display_whole_note\n",
+      "    tk.Label(note_window, text = f\"Author: {note.author}\", width = 30, height = 5, wraplength = 200).pack() # presents note metadata to user\n",
+      "                                            ^^^^^^^^^^^\n",
+      "AttributeError: 'MakeNote' object has no attribute 'author'\n"
+     ]
+    }
+   ],
    "source": [
     "# Lab 6: Noah Lee, testing if the commit works!\n",
     "\n",
@@ -200,7 +220,7 @@
     "        tk.Label(note_window, text = f\"Link: {note.note_link}\", width = 30, height = 5, wraplength = 200).pack() # presents note link to user\n",
     "        tk.Label(note_window, text = f\"Tag: {note.note_tag}\", width = 30, height = 5, wraplength = 200).pack() # presents note tags to user\n",
     "        tk.Label(note_window, text = f\"Metadata: {note.note_metadata}\", width = 30, height = 5, wraplength = 200).pack() # presents note metadata to user\n",
-    "\n",
+    "        tk.Label(note_window, text = f\"Author: {note.author}\", width = 30, height = 5, wraplength = 200).pack() # presents note metadata to user\n",
     "    # this method saves the note to your computer as a txt file\n",
     "    def save_notebook(self):\n",
     "        '''\n",
@@ -219,7 +239,7 @@
     "        # Edited code so we can add more than 3 notes \n",
     "         # runs if this is a real path\n",
     "        first_note = self.notes[0]\n",
-    "        note_dict = {'title':first_note.note_title, 'text':first_note.note_text, 'link':first_note.note_link, 'tag':first_note.note_tag, 'meta':first_note.note_metadata} \n",
+    "        note_dict = {'title':first_note.note_title, 'text':first_note.note_text, 'link':first_note.note_link, 'tag':first_note.note_tag, 'meta':first_note.note_metadata, 'Author':first_note.note_author} \n",
     "        # note_data_content = f\"Title: {first_note.note_title}\\n Text: {first_note.note_text}\\n Tag: {first_note.note_tag}\\nLink: {first_note.note_link}\\nMetadata: {first_note.note_metadata}\\n\"\n",
     "        \n",
     "        # gets the 0 index, so it will take data from the first note object in the list to save\n",
@@ -245,7 +265,7 @@
     "    def __init__(self, master, notebook, notes): # initialize the new object\n",
     "        super().__init__(master) # initialize it as a toplevel window\n",
     "\n",
-    "        self.geometry(\"700x400\") # set geometry\n",
+    "        self.geometry(\"800x500\") # set geometry\n",
     "        self.title('Note Form') # set title\n",
     "        self.config(bg = 'light gray') # set color\n",
     "        self.notes = notes # pass through notes variable\n",
@@ -268,7 +288,7 @@
     "        # create note tags entry field\n",
     "        self.tag_label = tk.Label(self, bg = 'light gray', text = 'Note tag:')\n",
     "        self.tag_label.grid(padx = 10, pady = 10, row = 3, column = 0, sticky = 'e')\n",
-    "        self.note_tags = tk.Entry(self, width=80) # allows user to enter data\n",
+    "        self.note_tags = tk.Entry(self, width = 80) # allows user to enter data\n",
     "        self.note_tags.grid(padx = 10, pady = 10, row = 4, column = 1, sticky = 'w')\n",
     "        self.note_tags.insert(0, 'Enter #tags, separated by commas') # adds default text (useful during development)\n",
     "        \n",
@@ -279,9 +299,15 @@
     "        self.note_link.grid(padx = 10, pady = 10, row = 3, column = 1, sticky = 'w')\n",
     "        self.note_link.insert(0, 'If there is a link with this note enter it here. Else, enter \"None\"') # adds default text (useful during development)\n",
     "        \n",
+    "        self.author_label = tk.Label(self, bg = 'light gray', text = 'Author:')\n",
+    "        self.author_label.grid(padx = 10, pady = 10, row = 5, column = 0, sticky = 'e')\n",
+    "        self.note_author = tk.Entry(self, width = 60) # allows user to enter data\n",
+    "        self.note_author.grid(padx = 10, pady = 10, row = 5, column = 1)\n",
+    "        self.note_author.insert('0', \"Insert Name\") # adds default text (useful during development\n",
+    "        \n",
     "        # create submit button\n",
     "        submit_button = tk.Button(self, text = 'submit', command = self.submit) # submit buttons runs when this button is clicked\n",
-    "        submit_button.grid(padx = 10, pady = 10, row = 5, column = 1, sticky = 'w')\n",
+    "        submit_button.grid(padx = 10, pady = 10, row = 7, column = 0, sticky = 'w')\n",
     "        \n",
     "    # the submit button gets the metadata for the note and calls the MakeNote class to transform the the entered data into a new note object\n",
     "    def submit(self):\n",
@@ -305,8 +331,9 @@
     "        tag = self.note_tags.get() # extract user input from tags section\n",
     "        link = self.note_link.get() # extract user input from link section\n",
     "        meta = meta\n",
+    "        author = self.note_author.get()\n",
     "        \n",
-    "        note_dict = {'title':title, 'text':text, 'link':link, 'tag':tag, 'meta':meta} # create the dictionary by creating key value pairs        \n",
+    "        note_dict = {'title':title, 'text':text, 'link':link, 'tag':tag, 'meta':meta, 'author':author} # create the dictionary by creating key value pairs        \n",
     "        make_note = MakeNote(note_dict) # pass the dictionary through to the creation of the MakeNote instance called make_note\n",
     "        self.notes.append(make_note) # append the instance of the class to the notes variable\n",
     "        self.notebook.append(make_note) # append the instance of the class to the notebook variable\n",
@@ -326,9 +353,22 @@
     "        self.note_link = note_dict['link'] # takes link from note_dict and sets it to the note_link attribute\n",
     "        self.note_tag = note_dict['tag'] # takes tag from note_dict and sets it to the note_tag attribute\n",
     "        self.note_metadata = note_dict['meta'] # takes metadata from note_dict and sets it to the note_metadata attribute\n",
+    "        self.note_author = note_dict['author']\n",
+    "        \n",
+    "class Snippet():\n",
+    "    def __init__(self, note_dict, notes, notebook):\n",
+    "        self.note_dict = note_dict # pass note dict\n",
+    "        self.notes = notes # pass through notes variable\n",
+    "        self.notebook = notebook # pass through note book variable \n",
     "        \n",
     "        \n",
     "    \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
     "# main execution\n",
     "\n",
     "if __name__ == '__main__':\n",
@@ -348,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "id": "dd1811bf",
    "metadata": {},
    "outputs": [
