started snippet class

--- a/Hannah_Richard_INST326_Project02_Template.ipynb
+++ b/Hannah_Richard_INST326_Project02_Template.ipynb
@@ -81,19 +81,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-04-17 18:18:21.615 python[90857:10038075] +[CATransaction synchronize] called within transaction\n",
-      "Exception in Tkinter callback\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/homebrew/Caskroom/miniconda/base/lib/python3.11/tkinter/__init__.py\", line 1948, in __call__\n",
-      "    return self.func(*args)\n",
-      "           ^^^^^^^^^^^^^^^^\n",
-      "  File \"/var/folders/ll/q3mkxzb114d_9jy0_83__xy00000gn/T/ipykernel_90857/1441918385.py\", line 101, in <lambda>\n",
-      "    tk.Button(new_window, text = f\"Title: {note.note_title} \", width = 20, height = 5, command = lambda n = note: self.display_whole_note(n)).pack() # when clicked, this button represents the whole note by running the display_whole_note method\n",
-      "                                                                                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/var/folders/ll/q3mkxzb114d_9jy0_83__xy00000gn/T/ipykernel_90857/1441918385.py\", line 123, in display_whole_note\n",
-      "    tk.Label(note_window, text = f\"Author: {note.author}\", width = 30, height = 5, wraplength = 200).pack() # presents note metadata to user\n",
-      "                                            ^^^^^^^^^^^\n",
-      "AttributeError: 'MakeNote' object has no attribute 'author'\n"
+      "2024-04-17 21:41:03.188 python[1166:10174644] +[CATransaction synchronize] called within transaction\n"
      ]
     }
    ],
@@ -220,7 +208,8 @@
     "        tk.Label(note_window, text = f\"Link: {note.note_link}\", width = 30, height = 5, wraplength = 200).pack() # presents note link to user\n",
     "        tk.Label(note_window, text = f\"Tag: {note.note_tag}\", width = 30, height = 5, wraplength = 200).pack() # presents note tags to user\n",
     "        tk.Label(note_window, text = f\"Metadata: {note.note_metadata}\", width = 30, height = 5, wraplength = 200).pack() # presents note metadata to user\n",
-    "        tk.Label(note_window, text = f\"Author: {note.author}\", width = 30, height = 5, wraplength = 200).pack() # presents note metadata to user\n",
+    "        tk.Label(note_window, text = f\"Author: {note.note_author}\", width = 30, height = 5, wraplength = 200).pack() # presents note metadata to user\n",
+    "        tk.Button(note_window, text = \"Click to edit note\", width = 10, height = 10, command = Snippet.edit_note).pack()\n",
     "    # this method saves the note to your computer as a txt file\n",
     "    def save_notebook(self):\n",
     "        '''\n",
@@ -357,16 +346,20 @@
     "        \n",
     "class Snippet():\n",
     "    def __init__(self, note_dict, notes, notebook):\n",
-    "        self.note_dict = note_dict # pass note dict\n",
+    "        self.note_text = note_dict[\"text\"] # pass note dict\n",
     "        self.notes = notes # pass through notes variable\n",
     "        self.notebook = notebook # pass through note book variable \n",
     "        \n",
+    "    def edit_note():\n",
+    "        edit_window = tk.Toplevel()\n",
+    "        edit_window.geometry(\"800x700\")\n",
+    "        edit_window.title(\"Edit Snippet\")\n",
     "        \n",
-    "    \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
+    "        edit_label = tk.Label(edit_window, bg= \"light gray\", text = \"Note text:\")\n",
+    "        edit_label.grid(padx = 10, pady = 10, row = 2, column = 0, sticky = \"e\")\n",
+    "        edit_text = tk.Text(edit_window, height = 10, width = 60)\n",
+    "        edit_text.grid(padx = 10, pady = 10, row = 2 , column = 1)\n",
+    "        edit_text.insert(\"1.0\", \"type to edit note\")\n",
     "        \n",
     "        \n",
     "# main execution\n",
