Save function fixed

--- a/Hannah_Richard_INST326_Project02_Template.ipynb
+++ b/Hannah_Richard_INST326_Project02_Template.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "id": "57954c28",
    "metadata": {},
    "outputs": [],
@@ -210,26 +210,16 @@
     "        '''\n",
     "        # ** this file path will need to be chnaged to work on the graders computer\n",
     "        # notes_dict = [note.to_dict() for note in self.notes]\n",
-    "        # file = filedialog.asksaveasfile(initialdir = 'C:/Users/theno/Documents/UMD SOPHOMORE/S2/INST 326/Group Project',\n",
-    "        #                                   defaultextension = \".json\", \n",
-    "        #                                   filetypes = [(\"JSON files\", \"*.json\"),\n",
-    "        #                                  ]) # gets the working directory where files will be saved, *** may need to be changed depending on the computer that this program is being run on         \n",
-    "        \n",
-    "        # if file:              \n",
-    "        # Edited code so we can add more than 3 notes \n",
-    "         # runs if this is a real path\n",
+    "        file = filedialog.asksaveasfile(initialdir = 'C:/Users/theno/Documents/UMD SOPHOMORE/S2/INST 326/Group Project',\n",
+    "                                          defaultextension = \".json\", \n",
+    "                                          filetypes = [(\"JSON files\", \"*.json\"),\n",
+    "                                         (\"all files\", \".*\")]) # gets the working directory where files will be saved, *** may need to be changed depending on the computer that this program is being run on         \n",
+    "\n",
     "        first_note = self.notes[0]\n",
     "        note_dict = {'title':first_note.note_title, 'text':first_note.note_text, 'link':first_note.note_link, 'tag':first_note.note_tag, 'meta':first_note.note_metadata} \n",
-    "        # note_data_content = f\"Title: {first_note.note_title}\\n Text: {first_note.note_text}\\n Tag: {first_note.note_tag}\\nLink: {first_note.note_link}\\nMetadata: {first_note.note_metadata}\\n\"\n",
     "        \n",
-    "        # gets the 0 index, so it will take data from the first note object in the list to save\n",
-    "        # file.write(f\"Title: {first_note.note_title}\\n\") # write in title to file\n",
-    "        # file.write(f\"Text: {first_note.note_text}\\n\") # write in text to file\n",
-    "        # file.write(f\"Tag: {first_note.note_tag}\\n\") # write in tag to file\n",
-    "        # file.write(f\"Link: {first_note.note_link}\\n\") # write in link to file\n",
-    "        # file.write(f\"Metadata: {first_note.note_metadata}\\n\") # write in metadata to file\n",
-    "        with open(f\"{first_note.note_title}.json\", 'w') as filename:\n",
-    "            json.dump(note_dict, filename) \n",
+    "        json_out = json.dumps(note_dict)\n",
+    "        file.write(json_out)\n",
     "        self.notes = [] # Setting self.notes to empty allows the index to always be 0\n",
     "\n",
     "        \n",
@@ -348,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "id": "dd1811bf",
    "metadata": {},
    "outputs": [
